deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: laravel-web
  type: NodePort
  ports:
    - name: 80-to-80
      protocol: TCP
      port: 80
      targetPort: 80
    - name: 443-to-443
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-web
  template:
    metadata:
      labels:
        app: laravel-web
    spec:
      containers:
        - name: laravel-web-container
          image: ''
          volumeMounts:
            - name: efs-vol
              mountPath: /var/www/html/vendors
            - name: efs-vol
              mountPath: /var/www/html/storage
      volumes:
        - name: efs-vol
          persistentVolumeClaim:
            claimName: pvc-demo
