ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: larave-web-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - local.secure.live
      secretName: laravel-web-secret
  rules:
    - host: local.secure.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
